crear estructura básica 2V

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,7 +36,7 @@ const { title } = Astro.props;
 	body {
 		background: #0F172A;
 		display: flex;
-		justify-content: center;
+		flex-direction: column;
 		min-height: 100vh;
 	}
 	
