--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,4 +1,4 @@
-<header class="flex justify-between items-center py-3 w-[1120px]">
+<header class="flex justify-between items-center py-3 w-[1120px] mx-auto">
     <img class="rounded-full w-12 h-12" 
     src="https://avatars.githubusercontent.com/u/187414154?v=4" 
     alt="seba photo">
