cambio de deseño centrado

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,9 @@ import Badge from '../components/Badge.astro';
 <Layout title="Welcome to Astro.">
 	<main>
 		<section class="w-full lg:w-[740px] mx-auto py-44">
+			<img class="rounded-full w-12 h-12 mb-4" 
+    		src="https://avatars.githubusercontent.com/u/187414154?v=4" 
+   		 	alt="seba photo">
 			<h1 class="text-white text-4xl font-bold flex flex-row gap-x-4 pb-5">Hey, soy Sebastián Gutierrez 
 				<div class="flex justify-center items-center"><Badge>Ingeniero Informático</Badge></div>
 			</h1>
