--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,9 +1,7 @@
-<header class="flex justify-between items-center py-3 w-[1120px] mx-auto">
-    <img class="rounded-full w-12 h-12" 
-    src="https://avatars.githubusercontent.com/u/187414154?v=4" 
-    alt="seba photo">
+<header class="flex justify-center items-center py-3 w-[1120px] mx-auto">
+    <span></span>
 
-    <nav class="flex flex-row gap-x-10 opacity-80">
+    <nav class="flex flex-row gap-x-10 opacity-80 ">
         <a href="/">Home</a>
         <a href="/sobre_mi">Sobre Mi</a>
         <a href="/projects">Proyectos</a>
